# aztecs

./: CHANGELOG.md  README.md  aztecs.cabal  cabal.project  cabal.project.local
.github/workflows/: ci.yml  haskell.yml  publish.yml
app/: Main.hs
aztecs-sdl/: aztecs-sdl.cabal
aztecs-sdl/examples/: SDL.hs
aztecs-sdl/src/Data/Aztecs/: SDL.hs
bench/: Bench.hs  Iter.hs
examples/: ECS.hs  Hooks.hs  Image.hs  Keyboard.hs  Lifecycle.hs  Mouse.hs  Observers.hs  Scheduler.hs  Sprite.hs  Text.hs  Window.hs  aztecs-examples.cabal
src/: Aztecs.hs
src/Aztecs/: Asset.hs  Camera.hs  Component.hs  ECS.hs  Entities.hs  Entity.hs  Hierarchy.hs  Input.hs  Internal.hs  R.hs  Storage.hs  Time.hs  Transform.hs  W.hs  Window.hs  World.hs
src/Aztecs/Asset/: AssetLoader.hs  AssetServer.hs  Class.hs
src/Aztecs/Asset/AssetLoader/: Class.hs
src/Aztecs/ECS/: Access.hs  Bundle.hs  Class.hs  Commands.hs  Component.hs  Entities.hs  Entity.hs  Event.hs  Executor.hs  HSet.hs  Observer.hs  Query.hs  Queryable.hs  R.hs  Runner.hs  Schedule.hs  Scheduler.hs  System.hs  Task.hs  View.hs  W.hs  World.hs
src/Aztecs/ECS/Access/: Class.hs  Internal.hs
src/Aztecs/ECS/Bundle/: Class.hs
src/Aztecs/ECS/Component/: Internal.hs
src/Aztecs/ECS/Entities/: Class.hs
src/Aztecs/ECS/Query/: Class.hs  Dynamic.hs  Internal.hs  Reader.hs
src/Aztecs/ECS/Query/Dynamic/: Class.hs  Reader.hs
src/Aztecs/ECS/Query/Dynamic/Reader/: Class.hs
src/Aztecs/ECS/Query/Reader/: Class.hs
src/Aztecs/ECS/Queryable/: Internal.hs  R.hs  W.hs
src/Aztecs/ECS/Schedule/: Access.hs  Class.hs  Dynamic.hs  Internal.hs  Reader.hs
src/Aztecs/ECS/Schedule/Dynamic/: Reader.hs
src/Aztecs/ECS/Schedule/Reader/: Class.hs
src/Aztecs/ECS/Scheduler/: Internal.hs
src/Aztecs/ECS/System/: Class.hs  Dynamic.hs  Queue.hs  Reader.hs
src/Aztecs/ECS/System/Dynamic/: Class.hs  Reader.hs
src/Aztecs/ECS/System/Dynamic/Reader/: Class.hs
src/Aztecs/ECS/System/Queue/: Class.hs
src/Aztecs/ECS/System/Reader/: Class.hs
src/Aztecs/ECS/World/: Archetype.hs  Archetypes.hs  Bundle.hs  Components.hs  Entities.hs  Internal.hs  Observers.hs  Storage.hs
src/Aztecs/ECS/World/Archetype/: Internal.hs
src/Aztecs/ECS/World/Archetypes/: Internal.hs
src/Aztecs/ECS/World/Bundle/: Class.hs  Dynamic.hs
src/Aztecs/ECS/World/Bundle/Dynamic/: Class.hs
src/Aztecs/ECS/World/Components/: Internal.hs
src/Aztecs/ECS/World/Entities/: Internal.hs
src/Aztecs/ECS/World/Observers/: Internal.hs
src/Aztecs/ECS/World/Storage/: Dynamic.hs
src/Aztecs/World/: Entities.hs
src/Data/: Aztecs.hs
src/Data/Aztecs/: Access.hs  Archetype.hs  Archetypes.hs  Command.hs  Component.hs  Components.hs  Core.hs  Edit.hs  Entity.hs  Query.hs  Schedule.hs  Scheduler.hs  Storage.hs  System.hs  Table.hs  Task.hs  View.hs  World.hs
src/Data/Aztecs/World/: Archetype.hs  Archetypes.hs  Components.hs
test/: Main.hs
