cabal-version: 2.4
name:          aztecs
version:       0.13.0
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    matt@hunzinger.me
author:        Matt Hunzinger
homepage:      https://github.com/aztecs-hs/aztecs
synopsis:
    A modular game engine and Entity-Component-System (ECS) for Haskell.

description:
    A modular game engine and Entity-Component-System (ECS) for Haskell.
    An ECS is a modern approach to organizing your application state as a database,
    providing patterns for data-oriented design and parallel processing.
    Aztecs provides side-effect free components and systems,
    as well as backends for rendering and input (such as `aztecs-sdl`),
    allowing you to structure your game as simple function of `Input -> World -> World`.

category:      Game Engine

source-repository head
    type:     git
    location: https://github.com/aztecs-hs/aztecs.git

library
    exposed-modules:
        Aztecs
        Aztecs.ECS
        Aztecs.ECS.Access
        Aztecs.ECS.Access.Internal
        Aztecs.ECS.Bundle
        Aztecs.ECS.Bundle.Class
        Aztecs.ECS.Class
        Aztecs.ECS.Commands
        Aztecs.ECS.Component
        Aztecs.ECS.Executor
        Aztecs.ECS.HSet
        Aztecs.ECS.Query
        Aztecs.ECS.Query.Class
        Aztecs.ECS.Query.Internal
        Aztecs.ECS.R
        Aztecs.ECS.Schedule
        Aztecs.ECS.Schedule.Internal
        Aztecs.ECS.Scheduler
        Aztecs.ECS.Scheduler.Internal
        Aztecs.ECS.System
        Aztecs.ECS.W
        Aztecs.Entity
        Aztecs.Internal
        Aztecs.Storage
        Aztecs.World
        Aztecs.World.Entities

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base >=4.2 && <5,
        containers >=0.6,
        deepseq >=1,
        mtl >=2,
        primitive >=0.6,
        sparse-set >=0.2

executable ecs
    main-is:          examples/ECS.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        aztecs

executable scheduler
    main-is:          examples/Scheduler.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        aztecs,
        mtl

executable hooks
    main-is:          examples/Hooks.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        aztecs,
        mtl

test-suite aztecs-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.2 && <5,
        aztecs,
        containers >=0.6,
        deepseq >=1,
        hspec >=2,
        QuickCheck >=2

benchmark aztecs-bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:
        -Wall -O2 -fspecialise-aggressively -fexpose-all-unfoldings

    build-depends:
        base >=4.2 && <5,
        aztecs,
        criterion >=1,
        deepseq >=1,
        primitive >=0.6,
        sparse-set >=0.2
